--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon src/index.js"
-    
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "author": "shyam",
   "license": "ISC",
@@ -16,6 +15,10 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
-    "mongoose": "^8.9.5"
+    "cookie-parser": "^1.4.7",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.5",
+    "multer": "^1.4.5-lts.1"
   }
 }
