dev branch created

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,6 @@ MONGODB_URL=mongodb+srv://shyam:12345@backendlearning.ay4w5.mongodb.net/?retryWr
 
 PORT=3000
 
+REFRESH_TOKEN_SECRET=1234fg
+ACCESS_TOKEN_SECRET=1234jl
+
