integrate Cloudinary for user profile and avatar image uploads

--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,9 @@ PORT=3000
 REFRESH_TOKEN_SECRET=1234fg
 ACCESS_TOKEN_SECRET=1234jl
 
+
+CLOUDINARY_NAME=dohmtkfoh
+CLOUDINARY_API_KEY=139355188852457
+CLOUDINARY_API_SECRET=A98VgWaPDkq-QsImsaGEDXfHzjU
+
+CLOUDINARY_URL=cloudinary://139355188852457:A98VgWaPDkq-QsImsaGEDXfHzjU@dohmtkfoh
