--- a/.gitignore
+++ b/.gitignore
@@ -119,4 +119,14 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
+# Custom file locations
+covered.txt
+learningNew.txt
+learningNew2.txt
+mongodbAggregation.txt
+mongooseQueries.txt
+
 # End of https://mrkandreev.name/snippets/gitignore-generator/#Node
+
+
+
